# mp2i-discord-bot

./: .#config.toml  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  bot-config.yaml.example  config.toml.example  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  log-config.toml  pyproject.toml
mp2i/: __main__.py  bot.py  models.py
mp2i/cogs/: academies.py  commands.py  error.py  events.py  guild_registration.py  help.py  leaderboard.py  member_registration.py  message_logger.py  mod_commands.py  pin.py  pinnable.py  ready.py  roles.py  sanctions.py  schools.py  suggestions.py  ticket.py  tickets.py  welcome.py
mp2i/cogs/profile/: _display.py  _editor.py  profile.py
mp2i/cogs/sanctions/: _editor.py  _logs.py  _warn.py  sanction.py
mp2i/cogs/school/: _editor.py  school.py  utils.py
mp2i/cogs/suggestions/: _modals.py  suggestion.py
mp2i/database/: __init__.py  exceptions.py  executor.py  setup.py
mp2i/database/models/: academy.py  guild.py  member.py  pin.py  promotion.py  sanction.py  school.py  suggestion.py  ticket.py  user.py
mp2i/static/text/: cpge.txt  engineering.txt  suggestions.md  ticket.md
mp2i/utils/: config.py  database.py  discord.py  email.py  paginator.py  school_manager.py
mp2i/wrappers/: __init__.py  guild.py  member.py  user.py
static/text/prof/: follow.md  greetings.md  mail.md
static/text/suggestion/: answer.md  process.md
static/text/ticket/: global_message.md  open_other.md  open_staff.md
